--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,35 +3,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikBlack.otf") format("opentype");
+  src: url("/assets/fonts/GraphikBlack.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikBold.otf") format("opentype");
+  src: url("/assets/fonts/GraphikBold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikSemibold.otf") format("opentype");
+  src: url("/assets/fonts/GraphikSemibold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikMedium.otf") format("opentype");
+  src: url("/assets/fonts/GraphikMedium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikRegular.otf") format("opentype");
+  src: url("/assets/fonts/GraphikRegular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -905,7 +905,7 @@ section {
 }
 
 .inlineService {
-  background: url(../images/bg/area-expertise.webp) no-repeat;
+  background: url(/assets/images/bg/area-expertise.webp) no-repeat;
   background-size: cover;
   position: relative;
   z-index: 1;
@@ -1003,7 +1003,7 @@ section {
 }
 
 .bg1 {
-  background: url(../images/bg/bg1.jpg) no-repeat;
+  background: url(/assets/images/bg/bg1.jpg) no-repeat;
   background-size: 100%, 100%;
   background-position: center;
 }
@@ -1070,7 +1070,7 @@ section {
 }
 
 .rightServices {
-  background: url(../images/bg/bg2.jpg) no-repeat;
+  background: url(/assets/images/bg/bg2.jpg) no-repeat;
   background-size: 100% 100%;
   position: relative;
   height: 100%;
@@ -1228,7 +1228,7 @@ section {
 }
 
 .marBlock {
-  background: url(../images/bg/action.webp) no-repeat;
+  background: url(/assets/images/bg/action.webp) no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 100vh;
@@ -1344,7 +1344,7 @@ section {
   right: 0px;
   width: 500px;
   height: 500px;
-  background: url(../images/bg/right-top.png) no-repeat;
+  background: url(/assets/images/bg/right-top.png) no-repeat;
   background-size: 100% 100%;
   z-index: -1;
 }
@@ -1362,7 +1362,7 @@ section {
   left: 0px;
   width: 300px;
   height: 300px;
-  background: url(../images/bg/dot-bg.png) no-repeat;
+  background: url(/assets/images/bg/dot-bg.png) no-repeat;
   background-size: 100% 100%;
   z-index: -1;
   animation: moving 5s ease-in-out infinite;
@@ -1466,7 +1466,7 @@ section {
 }
 
 .bgAction {
-  background: url(../images/bg/computerbg.jpg) no-repeat;
+  background: url(/assets/images/bg/computerbg.jpg) no-repeat;
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
@@ -1592,7 +1592,7 @@ section {
 }
 
 /* .bgTestimonial{
-  background: url(../images/bg/testimonial-bg.webp) no-repeat;
+  background: url(/assets/images/bg/testimonial-bg.webp) no-repeat;
   background-size:cover;
 } */
 .testimonialSlider .slick-list {
@@ -1761,7 +1761,7 @@ section {
 
 .firstColumn {
   padding: 60px 40px;
-  background: url(../images/bg/footer-first.webp) no-repeat;
+  background: url(/assets/images/bg/footer-first.webp) no-repeat;
   background-size: cover;
   position: relative;
   height: 100%;
@@ -2165,7 +2165,7 @@ section {
 .innerWebDesign {
   height: 69vh;
   height: 75vh;
-  background: url(../images/bg/website-designing-services.webp) no-repeat;
+  background: url(/assets/images/bg/website-designing-services.webp) no-repeat;
   background-size: cover;
   background-position: bottom;
   position: relative;
@@ -2176,7 +2176,7 @@ section {
 .innerWebDesign.lseo {
   background-position: center;
 
-  background: url(../images/local-seo/local-seo-services.jpg) no-repeat;
+  background: url(/assets/images/local-seo/local-seo-services.jpg) no-repeat;
   background-size: cover;
 }
 
@@ -2288,7 +2288,7 @@ section {
   z-index: 1;
   width: 100%;
   height: 10px;
-  background: url(../images/icons/arrow.png);
+  background: url(/assets/images/icons/arrow.png);
 }
 
 .bgBlueLight {
@@ -2308,7 +2308,7 @@ section {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url(../images/bg/bg-l.webp) no-repeat;
+  background: url(/assets/images/bg/bg-l.webp) no-repeat;
   background-size: cover;
 }
 
@@ -2332,7 +2332,7 @@ section {
   right: 0px;
   width: 43%;
   height: 100%;
-  background: url(../images/bg/working.jpg) no-repeat;
+  background: url(/assets/images/bg/working.jpg) no-repeat;
   background-size: 100% 100%;
 }
 
@@ -2359,7 +2359,7 @@ section {
 }
 
 .bg4 {
-  background: #f9f9f9 url(../images/bg/bg-r.webp) no-repeat;
+  background: #f9f9f9 url(/assets/images/bg/bg-r.webp) no-repeat;
   background-size: cover;
   position: relative;
   z-index: 1;
@@ -2373,7 +2373,7 @@ section {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url(../images/bg/bg-l.webp) no-repeat;
+  background: url(/assets/images/bg/bg-l.webp) no-repeat;
   background-size: cover;
 }
 
@@ -2614,7 +2614,7 @@ section {
   width: 100%;
   height: 60vh;
   z-index: -1;
-  background: url(../images/bg/industry.jpg) no-repeat;
+  background: url(/assets/images/bg/industry.jpg) no-repeat;
   background-size: 100% 100%;
   background-attachment: fixed;
 }
@@ -8560,7 +8560,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .bgDrive {
-  background: url(../images/bg/bg-seo-drive.webp) no-repeat;
+  background: url(/assets/images/bg/bg-seo-drive.webp) no-repeat;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
@@ -8592,7 +8592,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .bgSeo {
-  background: url(../images/bg/bg-seo.jpg) no-repeat;
+  background: url(/assets/images/bg/bg-seo.jpg) no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
@@ -8710,7 +8710,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .seoCallAction {
-  background: url(../images/bg/contact-coputer.jpg) no-repeat;
+  background: url(/assets/images/bg/contact-coputer.jpg) no-repeat;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
@@ -8864,7 +8864,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .bgSpecialized {
-  background: url(../images/bg/bg-service-seo.webp) no-repeat;
+  background: url(/assets/images/bg/bg-service-seo.webp) no-repeat;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
@@ -8932,7 +8932,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .faqsBg {
-  background: url(../images/bg/seo.jpg) no-repeat;
+  background: url(/assets/images/bg/seo.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -9142,7 +9142,7 @@ table tbody tr td:nth-child(2) {
   top: 6px;
   width: 12px;
   height: 12px;
-  background: url(../images/search-interface-symbol.png) no-repeat;
+  background: url(/assets/images/search-interface-symbol.png) no-repeat;
   background-size: cover;
   z-index: -1;
 }
@@ -9289,7 +9289,7 @@ table tbody tr td:nth-child(2) {
   position: absolute;
   width: 100%;
   height: 100px;
-  background: url(../images/bg/bg-team.jpg);
+  background: url(/assets/images/bg/bg-team.jpg);
   background-size: cover;
   background-position: center;
   border-top-right-radius: 10px;
@@ -9582,7 +9582,7 @@ table tbody tr td:nth-child(2) {
 
 .book-consultation {
   padding: 150px 0;
-  background-image: url(../images/bg/bg-lock.jpg);
+  background-image: url(/assets/images/bg/bg-lock.jpg);
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -9594,7 +9594,7 @@ table tbody tr td:nth-child(2) {
 }
 
 .OutsourcingServices {
-  background-image: url(../images/bg/outsourcing-services-bg.jpg);
+  background-image: url(/assets/images/bg/outsourcing-services-bg.jpg);
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -10543,7 +10543,7 @@ font-size: 20px;
   z-index: -1;
 }
 .banner-slide.slide-1 {
-  background-image: url(../images/banner/banner-slide-1.jpg);
+  background-image: url(/assets/images/banner/banner-slide-1.jpg);
   background-color: #33333370;
   background-blend-mode: multiply;
   background-position: center;
@@ -10551,7 +10551,7 @@ font-size: 20px;
   background-size: cover;
 }
 .banner-slide.slide-2 {
-  background-image: url(../images/banner/banner-slide-23.jpg);
+  background-image: url(/assets/images/banner/banner-slide-23.jpg);
   background-color: #333333db;
   background-position: center;
   background-blend-mode: multiply;
@@ -11610,7 +11610,7 @@ text-align: center;
   left: -271px;
   width: 600px;
   height: 600px;
-  background: url(../images/icons/red-dot.png) no-repeat;
+  background: url(/assets/images/icons/red-dot.png) no-repeat;
   background-size: cover;
   z-index: -1;
   opacity: .7;
