--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9736,7 +9736,7 @@ table tbody tr td:nth-child(2) {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
   color: #333;
   font-weight: 600;
@@ -11125,15 +11125,15 @@ font-size: 20px;
   transform: translateY(-50%);
   border-radius: 100%;
 }
-.item_price_titile {
+/* .item_price_titile {
   display: flex;
   justify-content: space-between;
   gap: 50px;
-}
-.item_price_titile h5 {
+} */
+/* .item_price_titile h5 {
   font-size: 20px;
   font-weight: 600;
-}
+} */
 .enquire_pricing_btn {
   background-color: #000;
   color: #fff;
@@ -11995,7 +11995,7 @@ text-align: center;
 }
 .rightBoxStrong p{
   color:#ccc;
-  font-size: 15px;
+  /* font-size: 15px; */
 }
 .weStrongHome:after{
   content: '';
@@ -12893,6 +12893,7 @@ text-align: center;
 }
 .brand_build .accordion-body {
   padding: 20px 0;
+  font-size: 18px;
 }
 .brand_build_title {
   font-size: 50px;
