--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1514,6 +1514,25 @@
   width: 100%;
   margin-bottom: 10px;
 }
+.about3_text_box_main{
+  padding-left: 0px;
+}
+.about3_text_box_btn{
+  flex-direction: column;
+}
+.img-about-3-1{
+  margin-bottom:0px;
+  position: relative;
+  z-index: 1;
+  border-radius:20px;
+}
+.img-about-3-2{
+  margin-left:0px;
+  
+}
+.about3_section h4,.about3_text_box_main{
+  text-align: center;
+}
 }
 
 /* For devices with a min-width of 767px */
