--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13228,3 +13228,51 @@ tudy-right-main {
   max-height: 100%;
 }
 
+
+/* about 3 */
+.btnHomeBanner.about3:hover{
+color: var(--red-color);
+}
+
+
+
+
+
+.about3_btn_box{
+  gap: 10px;
+}
+.about3_btn_box p{ 
+color: #000;
+}
+.about3_btn_box h5{ 
+color: #000;
+transition: all .3s ease-in-out;
+}
+.about3_btn_box .icon{
+width: 50px;
+}
+.about3_btn_box .icon img{
+object-fit: cover;
+width: 100%;
+height: 100%;
+mix-blend-mode: darken;
+}
+.about3_btn_box:hover h5{
+  color: var(--red-color);
+}
+
+/*  */
+.img-about-3-1{
+  margin-bottom: -100px;
+  position: relative;
+  z-index: 1;
+  border-radius:20px;
+ 
+}
+.img-about-3-2{
+  margin-left: 60px;
+  border-radius:20px;
+}
+.about3_text_box_main{
+  padding-left: 100px;
+}
