--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1243,7 +1243,6 @@
     z-index: 3;
     bottom: 0;
   }
-
 }
 @media (min-width: 1280px) {
   .containerFull {
@@ -1470,69 +1469,83 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 2px;
   }
-  .homeBannerText{
+  .homeBannerText {
     font-size: 12px;
     padding: 10px;
   }
-  .btnHomeBanner2{
+  .btnHomeBanner2 {
     margin-left: 0px;
     margin-top: 10px;
   }
-  .strongBoxHome  {
+  .strongBoxHome {
     display: flex;
     flex-direction: column;
-    gap:20px
-    
+    gap: 20px;
   }
-  .rightBoxStrong,.leftBoxStrong{
+  .rightBoxStrong,
+  .leftBoxStrong {
     width: 100%;
   }
   .caseStudyImgWeb img {
     max-width: 68%;
     max-height: 100%;
     object-fit: contain;
-}
-.home_our_client .large_heading2{
-  font-size: 25px !important;
-}
-.itemClientLogo {
-  width: calc(100% / 3 - 20px);
-  margin: 0 10px;
-}
-.clientLogoBox {
-  margin: 5px 0;
-}
-.featured_home .large_heading2{
-  font-size: 25px !important;
-  text-align: center;
-}
-.mapItemFooter{
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-.mapItemFooter .leftMapAddess{
-  width: 100%;
-  margin-bottom: 10px;
-}
-.about3_text_box_main{
-  padding-left: 0px;
-}
-.about3_text_box_btn{
-  flex-direction: column;
-}
-.img-about-3-1{
-  margin-bottom:0px;
-  position: relative;
-  z-index: 1;
-  border-radius:20px;
-}
-.img-about-3-2{
-  margin-left:0px;
-  
-}
-.about3_section h4,.about3_text_box_main{
-  text-align: center;
-}
+  }
+  .home_our_client .large_heading2 {
+    font-size: 25px !important;
+  }
+  .itemClientLogo {
+    width: calc(100% / 3 - 20px);
+    margin: 0 10px;
+  }
+  .clientLogoBox {
+    margin: 5px 0;
+  }
+  .featured_home .large_heading2 {
+    font-size: 25px !important;
+    text-align: center;
+  }
+  .mapItemFooter {
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+  .mapItemFooter .leftMapAddess {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .about3_text_box_main {
+    padding-left: 0px;
+  }
+  .about3_text_box_btn {
+    flex-direction: column;
+  }
+  .img-about-3-1 {
+    margin-bottom: 0px;
+    position: relative;
+    z-index: 1;
+    border-radius: 20px;
+  }
+  .img-about-3-2 {
+    margin-left: 0px;
+  }
+  .about3_section h4,
+  .about3_text_box_main {
+    text-align: center;
+  }
+
+  .we_strong.img_box img {
+    border-radius: 20px;
+    margin-top: 30px;
+  }
+  .item_numberd_row {
+    position: relative;
+    width: 100%;
+  }
+  .item_numberd_row h4 {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+  }
 }
 
 /* For devices with a min-width of 767px */
