--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13328,7 +13328,7 @@ tudy-right-main {
   margin-top: 10px !important;
 }
 
-.item_approach h2 {
+.item_approach h2,.partnership_box_content_1 h4 {
   font-size: 100px;
   -webkit-text-stroke: 2px #e31a20;
   -webkit-text-fill-color: transparent;
@@ -13406,4 +13406,39 @@ tudy-right-main {
   line-height: 55px;
   text-align: center;
   font-size: 30px;
+}
+.img_cities{
+  padding: 10px ;
+  background-color: #ffffff20;
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+.img_cities .img_box {
+background-color: #fff;
+border-radius: 6px;
+}
+.img_cities p{
+ font-size: 13px;
+ font-weight: 600;
+}
+
+
+.ourapproach_ul li{
+
+    padding: 8px 10px 1px;
+    padding-left: 25px;
+    position: relative;
+    z-index: 1;
+    font-size: 13px;
+  
+}
+.ourapproach_ul li:before {
+  content: "\f058";
+  color: #444;
+  top: 8px;
+  left: 0px;
+  font-size: 15px;
+  position: absolute;
+  font-family: var(--fa-style-family, "Font Awesome 6 Free");
+  font-weight: var(--fa-style, 900);
 }
