--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13328,7 +13328,8 @@ tudy-right-main {
   margin-top: 10px !important;
 }
 
-.item_approach h2,.partnership_box_content_1 h4 {
+.item_approach h2,
+.partnership_box_content_1 h4 {
   font-size: 100px;
   -webkit-text-stroke: 2px #e31a20;
   -webkit-text-fill-color: transparent;
@@ -13407,30 +13408,27 @@ tudy-right-main {
   text-align: center;
   font-size: 30px;
 }
-.img_cities{
-  padding: 10px ;
+.img_cities {
+  padding: 10px;
   background-color: #ffffff20;
   border: 1px solid #fff;
   border-radius: 10px;
 }
 .img_cities .img_box {
-background-color: #fff;
-border-radius: 6px;
+  background-color: #fff;
+  border-radius: 6px;
 }
-.img_cities p{
- font-size: 13px;
- font-weight: 600;
+.img_cities p {
+  font-size: 13px;
+  font-weight: 600;
 }
 
-
-.ourapproach_ul li{
-
-    padding: 8px 10px 1px;
-    padding-left: 25px;
-    position: relative;
-    z-index: 1;
-    font-size: 13px;
-  
+.ourapproach_ul li {
+  padding: 8px 10px 1px;
+  padding-left: 25px;
+  position: relative;
+  z-index: 1;
+  font-size: 13px;
 }
 .ourapproach_ul li:before {
   content: "\f058";
@@ -13441,4 +13439,105 @@ border-radius: 6px;
   position: absolute;
   font-family: var(--fa-style-family, "Font Awesome 6 Free");
   font-weight: var(--fa-style, 900);
+}
+
+.item_qa {
+  display: flex;
+  gap: 15px;
+  /* flex-direction: column; */
+}
+
+.item_qa .img_box {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+  background-color: var(--red-color);
+}
+.item_qa .img_box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  filter: grayscale(100%) brightness(1000%);
+}
+
+.qa_main {
+  background-position: center;
+  background-image: url(/assets/images/bg/website-designing-services.webp);
+  background-color: #333;
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+/* item_button_why  */
+.item_why_container {
+  /* background-color: #ffffff22; */
+}
+.item_button_why {
+  font-size: 19px;
+  background-color: transparent;
+  padding: 10px 10px;
+  font-weight: 600;
+  border: none;
+  color: #ffffff55;
+  border-bottom: 2px solid #ffffff22;
+  transition: all 0.5s ease-in-out;
+}
+.item_button_why:hover {
+  background-color: #ffffff77;
+  padding: 10px 10px;
+
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff55;
+}
+.item_button_why.active {
+  background-color: var(--red-color);
+  padding: 10px 10px;
+
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff55;
+}
+
+.DesignThinking {
+  position: relative;
+}
+.DesignThinking::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 55%;
+  height: 100%;
+  background-color: #000;
+  z-index: -1;
+}
+
+.item_swiper_design_thinking {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  align-items: end;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.item_swiper_design_thinking .content {
+  min-height: 80px;
+  padding: 10px;
+}
+.item_swiper_design_thinking .content .inner {
+  background: #fff;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10px;
+  border-radius: 10px;
+}
+.item_swiper_design_thinking img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
