commit web dev page changes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13555,3 +13555,15 @@ tudy-right-main {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+
+
+
+/* web_services */
+.web_services .sec_description{
+  /* text-wrap: balance; */
+
+}
+
+.item_wev_services{
+  
+}
