commit webservices done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13559,8 +13559,22 @@ tudy-right-main {
 
 
 /* web_services */
+.web_services {
+position: relative;
+}
+.web_services:after{
+position: absolute;
+content: "";
+top: 0;
+left: 0;
+width: 100%;
+height: 70%;
+background-color: #000;
+z-index: -1;
+}
+
 .web_services .sec_description{
-  /* text-wrap: balance; */
+
 
 }
 
