--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12577,11 +12577,21 @@ font-size: 20px;
 .service__text {
   color: #ffffff89;
   transition: all 0.3s;
+  max-height: 100px;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+.service__item.active .service__text {
+  max-height: 300px;
 }
 
 .service__link {
   text-align: right;
   overflow: hidden;
+}
+.service__item:hover .service__link p i {
+  color: #fff;
 }
 
 .service__link p i,
@@ -12590,7 +12600,7 @@ font-size: 20px;
   transition: all 0.3s;
 }
 
-.service__link p:after {
+/* .service__link p:after {
   position: absolute;
   content: "\f061";
   font-family: Font Awesome\6 Free;
@@ -12601,14 +12611,14 @@ font-size: 20px;
   color: #ffffff89;
   visibility: hidden;
   transition: all 0.3s ease-in-out;
-}
+} */
 .service__link p {
   position: relative;
   display: inline-block;
   font-size: 48px;
   color: #ffffff89;
 }
-.service__item:hover .service__link p i {
+.service__item.service__link p i {
   transform: translate(60px, -60px) rotate(-45deg);
   color: #fff;
 }
@@ -13294,6 +13304,15 @@ tudy-right-main {
   overflow: hidden;
   width: 100%;
 }
+.seo_about_temp .img_grid .item_img:first-child {
+  height: 400px;
+  background-color: #f7f7f7;
+}
+.seo_about_temp .img_grid .item_img:first-child img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 .seo_about_temp .img_grid .item_img:last-child {
   margin-top: 100px;
 }
@@ -13556,28 +13575,36 @@ tudy-right-main {
   border-bottom-right-radius: 10px;
 }
 
-
-
 /* web_services */
 .web_services {
-position: relative;
+  position: relative;
 }
-.web_services:after{
-position: absolute;
-content: "";
-top: 0;
-left: 0;
-width: 100%;
-height: 70%;
-background-color: #000;
-z-index: -1;
-}
-
-.web_services .sec_description{
-
-
+.web_services:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70%;
+  background-color: #000;
+  z-index: -1;
 }
 
-.item_wev_services{
-  
+.web_services .sec_description {
+}
+
+.item_web_services {
+  border-radius: 10px;
+  border: 1px solid #33333333;
+}
+.item_content_key {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.icon_web_key{
+  filter: invert();
 }
