--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -392,7 +392,7 @@ section {
 .leftCont {
   width: calc(100% - 50px);
 }
-.itemMega p.title{
+.itemMega p.title {
   font-size: 18px;
 }
 .itemMega p {
@@ -415,10 +415,12 @@ section {
 .bgBlueMenu {
   background: #ebf1fe;
 }
-.bgBlueMenu:hover h4, .bgBlueMenu:hover p.title {
+.bgBlueMenu:hover h4,
+.bgBlueMenu:hover p.title {
   color: var(--light-blue-color);
 }
-.bgRedMenu:hover h4, .bgRedMenu:hover p.title {
+.bgRedMenu:hover h4,
+.bgRedMenu:hover p.title {
   color: var(--red-color);
 }
 .extraMenuItems ul li a {
@@ -1829,7 +1831,8 @@ section {
   padding: 50px 0 15px;
 }
 
-.footerColumn h4, .footerTitle p {
+.footerColumn h4,
+.footerTitle p {
   color: #ccc;
   font-size: 20px;
   margin-bottom: 20px;
@@ -11686,8 +11689,8 @@ font-size: 20px;
   z-index: 1;
   font-size: 1.25rem !important;
 }
-.getList p:after{
-  display:none;
+.getList p:after {
+  display: none;
 }
 .getList p:before {
   content: "\f058";
@@ -11866,7 +11869,7 @@ font-size: 20px;
   width: 100%;
   height: 203px;
 }
-p.regular_heading{
+p.regular_heading {
   font-size: 35px;
 }
 .caseStudyRight {
@@ -11967,7 +11970,8 @@ p.regular_heading{
   z-index: 1;
   overflow: hidden;
 }
-.weStrongHome h3, .weStrongHome h2 {
+.weStrongHome h3,
+.weStrongHome h2 {
   color: #fff;
 }
 .leftBoxStrong {
@@ -13625,20 +13629,19 @@ tudy-right-main {
   top: 50%;
   transform: translateY(-50%);
   z-index: 10;
-  background-color: rgba(0, 0, 0, 0.3); 
+  background-color: rgba(0, 0, 0, 0.3);
   color: white !important;
   padding: 6px;
   border-radius: 50%;
   cursor: pointer;
   opacity: 0.5;
   transition: all 0.3s ease;
-  font-size:15px;
+  font-size: 15px;
 }
-
 
 .custom-swiper-arrow:hover {
   opacity: 1;
-  background-color: rgba(0, 0, 0, 0.6); 
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .swiper-button-prev {
@@ -13649,11 +13652,7 @@ tudy-right-main {
   right: 10px;
 }
 
-
-
 /* Cta2 */
-
-
 
 .cta2-section {
   padding: 0 !important;
@@ -13661,7 +13660,7 @@ tudy-right-main {
 }
 
 .cta-left {
-  background-image: url('/assets/images/cta2/bg.png');
+  background-image: url("/assets/images/cta2/bg.png");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -13673,7 +13672,7 @@ tudy-right-main {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.6); 
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 0;
 }
 
@@ -13693,10 +13692,9 @@ tudy-right-main {
   color: black;
 }
 
-
 /* SmoPage */
 .feature-icon .icon-box {
-  color: var(--red-color); 
+  color: var(--red-color);
   font-size: 2.5rem;
   margin-right: 15px;
 }
@@ -13710,13 +13708,26 @@ tudy-right-main {
   margin: 0;
 }
 
-
-
-
-.firstColumn .text_red{
-  color: var(--red-color) !important;  
+.firstColumn .text_red {
+  color: var(--red-color) !important;
 }
-.footerTitle p{
-  color:#ccc;
-  font-size:20px;
+.footerTitle p {
+  color: #ccc;
+  font-size: 20px;
+}
+.modelBtn {
+  position: fixed;
+  top: 50%;
+  z-index: 999;
+  rotate: 90deg;
+  border: 0;
+  right: -32px;
+  transform: translateY(-50%);
+  background-color: var(--red-color);
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  transition: all 0.3s ease-in-out;
+
 }
