--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1622,11 +1622,11 @@
   }
 
   .btnHomeBanner {
-    width: 100%;
+    width: 80%;
     text-align: center;
-    padding: 1rem; 
+    /* padding: 1rem; 
     font-size: 1.2rem; 
-    border-radius: 8px; 
+    border-radius: 8px;  */
   }
 
   .icon-box {
