--- a/public/assets/css/chatbot.css
+++ b/public/assets/css/chatbot.css
@@ -1,7 +1,7 @@
 .chat-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 85vh;
 }
 
 .chat-header {
@@ -27,10 +27,12 @@
   overflow-y: auto;
   padding: 16px;
   background-color: #f0f2f5;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .chat-message {
-  max-width: 60%;
+  max-width: 55%;
   margin-bottom: 12px;
   padding: 12px;
   border-radius: 8px;
@@ -42,7 +44,7 @@
   background-color: #4b4cfc;
   color: white;
   margin-left: auto;
-  text-align: right;
+  /* text-align: right; */
 }
 
 .chat-message.bot {
