--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -44,6 +44,19 @@ h2.blog_section_item,
     margin: 0;
     font-size: 130%;
     font-weight: 600;
+    position: relative;
+    margin-bottom: 25px;
+}
+
+h2.blog_section_item::after,
+.blog-faqs h3::after,
+.action_tab h2::after {
+    content: '';
+    display: block;
+    width: 70px;
+    margin: 10px 0 0;
+    background: linear-gradient(135deg, rgba(232, 32, 30, 0.8), rgba(45, 118, 178, 0.8));
+    height: 5px;
 }
 
 .blog_section_item p,
@@ -126,42 +139,92 @@ h2.blog_section_item,
     color: #114c8d;
 }
 
+.blog_section_shadow {
+  background: #ffffff;
+  border-radius: 5px;
+  border: 1px solid #eaeaea;
+  padding: 32px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
+  color: #333;
+  display: flex;
+  /* gap: 24px; */
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
 .blogAuthor {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 24px;
-  align-items: flex-start;
-  margin-top: 40px;
-  padding: 24px;
-  border: 1px solid #e0e0e0;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+  width: 100%;
+}
+
+.authorImage {
+  position: relative;
+  width: 160px;
+  height: 160px;
 }
 
 .authorImage img {
-  width: 160px;
-  height: 160px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 2px solid #ddd;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  border: 3px solid #f0f0f0;
+  position: relative;
+  z-index: 2;
+}
+
+.authorImage::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  z-index: 1;
+  background: radial-gradient(circle at center, #E8201E, #2D76B2);
+  filter: blur(10px);
+  opacity: 0.6;
 }
 
 .authorContent {
   flex: 1;
 }
 
-.authorName {
-  font-weight: 600;
+.authorHeader {
+  display: flex;
+  align-items: center;
+  gap: 10px;
   font-size: 18px;
-  margin-bottom: 8px;
-  color: var(--dark-blue-color);
+  font-weight: 600;
+  color: #2d76b2;
+  margin-bottom: 10px;
+}
+
+.authorHeader i {
+  font-size: 20px;
+  color: #e8201e;
+}
+
+.authorName {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 10px;
+  background: linear-gradient(90deg, #1B5083, #1B5083);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text; /* For Firefox */
+  text-fill-color: transparent;
 }
 
 .authorDescription * {
-  font-size: 14px;
-  line-height: 1.7;
+  font-size: 13px;
+  line-height: 1.8;
+  color: #555;
 }
 
 /* Responsive (Mobile) */
