--- a/styles/style.css
+++ b/styles/style.css
@@ -2034,7 +2034,7 @@ section {
 }
 
 .mapBlock {
-  background: url(/assets/images/bg/footer-bg-min.jpg) no-repeat;
+  background: url(/assets/images/bg/footer-bg-min.webp) no-repeat;
   background-attachment: fixed;
   background-size: cover;
   position: relative;
